[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gameplay/Weapons/Base Weapon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Animations/Weapon Animation Tree.tres" type="AnimationNodeBlendTree" id=2]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="Base Weapon" type="Spatial"]
script = ExtResource( 1 )

[node name="firetimer" type="Timer" parent="."]
one_shot = true

[node name="reloadtimer" type="Timer" parent="."]
one_shot = true

[node name="tree" type="AnimationTree" parent="."]
tree_root = ExtResource( 2 )
"parameters/Add First Shot/active" = false
"parameters/Add Second Shot/active" = false
parameters/TimeScale/scale = 1.0
"parameters/Weapon State/playback" = SubResource( 1 )

[node name="drawtimer" type="Timer" parent="."]
one_shot = true

[node name="Rotational Parent" type="Position3D" parent="."]

[node name="chambertimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="firetimer" to="." method="_cycled"]
[connection signal="timeout" from="reloadtimer" to="." method="_on_reloadtimer_timeout"]
[connection signal="timeout" from="drawtimer" to="." method="finish_draw"]
[connection signal="timeout" from="chambertimer" to="." method="_on_chambertimer_timeout"]
